[refactor] 실패한 테스트 수정 (#508)